# vara-eth-skills

./: .gitignore  AGENTS.md  README.md
examples/digit-recognition-injected-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
examples/digit-recognition-injected-frontend/src/: App.tsx  styles.css  varaEth.ts  vite-env.d.ts
examples/escrow/: .gitignore  Cargo.toml  OrderEscrow.sol  README.md  build.rs
examples/escrow/app/: Cargo.toml
examples/escrow/app/src/: lib.rs
examples/escrow/contracts/: OrderEscrowAdapter.sol
examples/escrow/frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
examples/escrow/frontend/src/: App.tsx  escrow.ts  styles.css  vite-env.d.ts
examples/escrow/src/: lib.rs
examples/vault/: .env.example  .gitignore  Cargo.toml  README.md  Vault.sol  VaultApp.sol  build.rs  package-lock.json  package.json  tsconfig.json
examples/vault/app/: Cargo.toml
examples/vault/app/src/: lib.rs
examples/vault/cache/: solidity-files-cache.json
examples/vault/client/: Cargo.toml  build.rs  vault_client.idl
examples/vault/client/src/: lib.rs  vault_client.rs
examples/vault/src/: lib.rs
examples/vault/tests/: gtest.rs
examples/vault/ts/: vault_abi_interact.ts  vault_admin_flow.ts  vault_create_with_abi.ts  vault_read_state.ts  vault_vara_eth_api.ts
playbooks/: vara-eth-abi-interface.md  vara-eth-ethexe-cli-workflow.md  vara-eth-full-app-workflow.md  vara-eth-injected-app-workflow.md  vara-eth-mirror-adapter-frontend-workflow.md  vara-eth-ts-api-workflow.md
references/: contract-writing-checklist.md  error-log.md  flow-checks.md  source-map.md
skills/vara-eth-app-builder/: SKILL.md
skills/vara-eth-contract-writer/: SKILL.md
skills/vara-eth-full-app-builder/: SKILL.md
skills/vara-eth-injected-app-builder/: SKILL.md
skills/vara-eth-mirror-adapter-frontend-builder/: SKILL.md
skills/vara-eth-solidity-integrator/: SKILL.md
