[package]
name = "order-escrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Vara.eth order engine used by a Solidity escrow adapter example"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe"] }
order-escrow-app.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "build"] }
order-escrow-app.workspace = true

[workspace]
resolver = "3"
members = ["app"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/order-escrow"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0-beta.2"
order-escrow-app = { version = "0.1.0", path = "app" }
