[package]
name = "vault"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe"] }
vault-app.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }
vault-app.workspace = true
vault-client.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["ethexe", "build"] }
vault-app.workspace = true

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/gear-tech/vault"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "1.0.0-beta.2"
tokio = "1.50.0"
vault-app = { version = "0.1.0", path = "app" }
vault-client = { version = "0.1.0", path = "client" }
