[package]
name = "order-escrow-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Sails services for the Vara.eth order escrow example"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["ethexe"] }
